Fix contrast problems

--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ h1 .ResourceHubFirstText {
   padding: 10px;
   text-align: center;
   font-size: 2.0rem;
-  color: #052324;
   flex: 1;
   border: none;
 }
